Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add format to phone numbers
* Rename VAT Code into Tax Identifier
* Add sequence order on Identifier
* Add Replace Party wizard
* Remove streetbis from Address
* Add address format per country and language
* Restrict subdivision address to first level

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Add Python3 support
* Remove required on Party name

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Change Party.lang into Property
* Add a list of identifier to party

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* compact vat number
* value Function fields don't set the value anymore

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Add autocomplete on zip and city

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)

Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)
* Add url widget to contact mechanism list view

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)

Version 2.4.0 - 2012-04-24
* Bug fixes (see mercurial logs for details)
* Allow to have no Party Sequence

Version 2.2.0 - 2011-10-24
* Bug fixes (see mercurial logs for details)

Version 2.0.0 - 2011-04-27
* Bug fixes (see mercurial logs for details)

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)
* Add default address on party

Version 1.6.0 - 2010-05-10
* Bug fixes (see mercurial logs for details)
* Don't allow empty vat_number if vat_country is set
* Use model singleton to define which party sequence to use
* Improve search_rec_name of category to take care of separator

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)