@@ -1,3 +1,5 @@
+* Use static selection for identifier type
+
 Version 4.2.0 - 2016-11-28
 * Bug fixes (see mercurial logs for details)
 * Add format to phone numbers
